# Robo_xiangli

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/LCD_Driver/: CMakeLists.txt  Kconfig  ST7701S.c
components/esp32_s3_xiangli/: board_pins_config.c
components/lvgl/: Kconfig
main/: CMakeLists.txt  main.c  myGUI.c  sys_app.c  sys_dev.c  test3.c
main/Applications/include/: sys_init.h  sys_internal.h  user_config.h
main/Applications/src/: sys_app.c  sys_dev.c
main/Drivers/include/: MAX98357.h  ST7701S.h  hardware_config.h  wifi.h
main/Drivers/src/: MAX98357.c  ST7701S.c  wifi.c
main/Middlewares/include/: lvgl_porting.h  myGUI.h
main/Middlewares/src/: lvgl_porting.c  myGUI.c
main/Modules/include/: robot_audio.h  robot_network.h  robot_screen.h  screen.h
main/Modules/src/: audio.c  robot_audio.c  robot_network.c  robot_screen.c  screen.c
main/include/: myGUI.h  sys_init.h
main/picture/: bilibili.c  headshot.c  logo_huanglong.c  wifi_logo.c
